...
  <string name="permission_status_warning">Issue</string>
  <string name="permission_status_disabled">Not enabled</string>
  <string name="chat_edit_replace_later">Sending will replace this message and everything after it</string>
  <string name="chat_edit_replace_message">Sending will replace this message</string>
  <string name="chat_eta_working">YUNKe is working…</string>
  <string name="chat_input_hint">Ask YUNKe to do something</string>
  <string name="chat_stop">Stop</string>
  <string name="chat_send">Send</string>
  <string name="chat_image_preview">Image preview</string>
  <string name="chat_video_preview">Video preview</string>
  <string name="chat_image_saved">Saved to gallery</string>
  <string name="chat_image_save_failed">Couldn\'t save image</string>
  <string name="chat_image_load_failed">Couldn\'t load image</string>
  <string name="chat_image_prompt_required">Enter a description to generate an image</string>
  <string name="chat_image_generation_empty">The model didn\'t return an image</string>
  <string name="chat_image_generation_unsupported">This provider doesn\'t support image generation</string>
  <string name="chat_video_prompt_required">Enter a description to generate a video</string>
  <string name="chat_video_generation_empty">The model didn\'t return a video</string>
  <string name="chat_video_generation_unsupported">This provider doesn\'t support video generation</string>
  <string name="chat_continue">Continue</string>
  <string name="chat_paused_run_abandoned">Paused reply ended</string>
  <string name="chat_continue_abort">Long press to end the paused reply</string>
  <string name="chat_continue_prompt">Continue from where you left off. Do not repeat content already written.</string>
  <string name="chat_reasoning_effort">思考强度：%1$s</string>
  <string name="reasoning_picker_title">Adjust thinking depth</string>
  <string name="status_unsupported">Unsupported</string>
...
